# NTNU-bio-ai-3

./: .gitignore  Cargo.toml  README.md  config.json  evaluate_result.py  pareto_front_visualizer.py  pareto_sort_validator.py
src/: config.rs  crossover_functions.rs  distance.rs  genetic_algorithm.rs  global_data.rs  individual.rs  main.rs  mutation_functions.rs  population.rs  selection_functions.rs  utils.rs
